--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
